--- a/build.gradle
+++ b/build.gradle
@@ -165,7 +165,7 @@ dependencies {
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
-    implementation fg.deobf("curse.maven:cold_sweat-506194:4770585") {transitive = false}
+    implementation fg.deobf("curse.maven:cold-sweat-506194:4900462") {transitive = false}
 
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
